--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -21,5 +21,6 @@
   "Max": "  الكبري",
   "clear sky": "  سماء صافيه",
   "light rain": " امطار متوسطه",
-  "few clouds": " سحب متوسطه "
+  "few clouds": " سحب متوسطه ",
+  "Weather App": "تطبيق الطقس"
 }
